--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=Vanessarezende
 APP_ENV=local
 APP_KEY=base64:S/uig1w/WsSFxDVnez+wrOnXD5k1ky49xznNI6gdWyY=
 APP_DEBUG=true
-APP_URL=https://vanessarezende.com/
+APP_URL=http://phplaravel-950091-3308835.cloudwaysapps.com/
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
